--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -93,20 +93,25 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
-            <div class="blog__details__hero set-bg mb-0" data-setbg="../img/blog/details/blog-hero4.jpg">
-                <!-- <div class="row d-flex justify-content-center">
-                    <div class="col-lg-7 text-center">
-                        <div class="blog__hero__text">
-                            <h2>Here’s how you can get a natural glow this party season</h2>
-                            <ul>
-                                <li><img src="../img/blog/blog-author.jpg" alt=""> John Doe</li>
-                                <li>Dec 06, 2019</li>
-                            </ul>
+    <section class="blog-details spad mt-9">
+        <div class="container">
+            <div class="services__details__pic">
+                <div class="services__details__pic">
+                    <img src="../img/blog/details/blog-hero4.jpg" alt="">
+                    <div class="services__details__content">
+                        <div class="row w-100 align-items-center">
+                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                <div class="services__details__title">
+                                    <h3><img src="../img/icons/amamentação-white.png" class="fa mr-3" alt="">
+                                    </h3>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-sm-8">
+                                <h3>Dra Inês Claudino</h3>
+                            </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             <div class="row d-flex justify-content-center mt-4">
                 <div class="col-lg-12">
@@ -116,15 +121,15 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="mb-4 subtitle fw-bolder">Amamentação
+                                        <h2 id="parto" class="mb-4 subtitle fw-bolder">Amamentação
                                         </h2>
-                                        <h5 class="mb-0 mt-4 h4"><b>O leite materno <br> É o melhor alimento para o seu
+                                        <h5 class="mb-2 mt-4 h4"><b>O leite materno é o melhor alimento para o seu
                                                 bebé!</b></h5>
-                                        <p class="mb-4">A amamentação é um ato natural. A grande maioria das mulheres
+                                        <p class="mb-2">
+                                            A amamentação é um ato natural. A grande maioria das mulheres
                                             nasce com a
                                             capacidade física de amamentar, o que não
-                                            implica que amamentar seja fácil. </p>
-                                        <p class="mb-4">
+                                            implica que amamentar seja fácil. <br>
                                             Há vários fatores que têm um papel fundamental na amamentação e que são
                                             únicos em cada mãe. Dentro de muitos outros
                                             salientamos a escolaridade materna, o contexto socio-económico, a situação
@@ -151,24 +156,6 @@
 
     <section class="services  set-bg">
         <div class="container">
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-12">
-                    <div class="ml-4 mr-4">
-                        <div class="blog__details__text__item">
-                            <!-- Título da Seção -->
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="section-title">
-                                        <h3 id="parto" class="">
-                                        </h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
             <div class="d-flex">
                 <div id="pré-parto" class="col-lg-8 col-md-8">
                     <div class="row">
@@ -237,7 +224,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                                 <p>Mães/Casais que iniciaram a sua jornada de amamentação e que têm alguma dúvida sobre
                                     a mesma.
                                     É especialmente interessante para mães que querem preparar o seu regresso ao
@@ -249,23 +235,33 @@
                                     <h5 class="underline"><b>Temáticas abordadas nesta consulta:</b></h5>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
-                                <p class="mb-4"><b>Bebé e amamentação:</b> pega correta, diferentes posições de
-                                    amamentação, confusão de bicos, sinais de fome, rejeição da amamentação, escasso
-                                    ganho de peso, diferentes técnicas para oferecer leite materno sem usar a mama.
-                                </p>
-                                <p class="mb-4"><b>Mãe e amamentação:</b> amamentação dolorosa, lesões nas mamas,
-                                    mastites, técnica manual de extração de leite materno, técnica de extração de leite
-                                    materno com bomba, relactação.
-                                </p>
-                                <p class="mb-4"><b>Regresso ao trabalho e amamentação:</b> como preparar o regresso ao
-                                    trabalho, armazenamento adequado de leite materno, manutenção da amamentação em
-                                    exclusivo até aos 6 meses de vida.
-                                </p>
-                                <p class="mb-4"><b>Desmame:</b> ccomo fazer um desmame gentil e progressivo, desmame
-                                    noturno, desmame natural.
-                                </p>
+                                <ul class="list">
+                                    <li><a><i class="fa fa-check-circle"></i> <b>Bebé e amamentação:</b> pega correta,
+                                            diferentes posições de
+                                            amamentação, confusão de bicos, sinais de fome, rejeição da amamentação,
+                                            escasso
+                                            ganho de peso, diferentes técnicas para oferecer leite materno sem usar a
+                                            mama.</a></li>
+                                    <li><a><i class="fa fa-check-circle"></i> Mãe e amamentação:</b> amamentação
+                                            dolorosa, lesões nas mamas,
+                                            mastites, técnica manual de extração de leite materno, técnica de extração
+                                            de leite
+                                            materno com bomba, relactação.</a></li>
+                                    <li><a><i class="fa fa-check-circle"></i> <b>Regresso ao trabalho e amamentação:</b>
+                                            como preparar o regresso ao
+                                            trabalho, armazenamento adequado de leite materno, manutenção da amamentação
+                                            em
+                                            exclusivo até aos 6 meses de vida.</a></li>
+                                    <li><a><i class="fa fa-check-circle"></i> <b>Desmame:</b> ccomo fazer um desmame
+                                            gentil e progressivo, desmame
+                                            noturno, desmame natural.</a>
+                                    </li>
+                                </ul>
+                                <div class="section-title  text-center mb-2">
+                                    <h4 class=" mb-2 mt-4"><b>! Informação importante !</b></h3>
+                                </div>
                                 <p>
-                                    <b>Importante:</b> Esta consulta inclui a recolha da história clínica da amamentação
+                                    Esta consulta inclui a recolha da história clínica da amamentação
                                     atual e prévias (se procede), o exame físico da paciente e do seu bebé e a
                                     observação da mamada. Traga o seu Boletim de Saúde de Grávida e o Boletim de Saúde
                                     do seu bebé. Aconselhamos a que ambos vistam roupas confortáveis e apropriadas à
@@ -276,7 +272,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
