--- a/pages/header.html
+++ b/pages/header.html
@@ -63,7 +63,8 @@
 
                                         </ul>
                                         <br>
-                                        <span class="pt-4">Medicina do Viajante</span>
+                                        <span class="pt-4"><img src="../img/icons/viajante.png" alt="">Medicina do
+                                            Viajante</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="viajante.html">Consulta</a></li>
                                         </ul>
