--- a/team.html
+++ b/team.html
@@ -1,13 +1,3 @@
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -189,32 +179,59 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad">
+    <section class="blog-details ">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="team-area sp">
                     <div class="container">
-                        <div class="row">
+                        <div class="row text-center mb-2">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h2 class="h4 d-flex align-intems-center justify-content-center"><img
+                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            alt="">Atendimento ao
+                                        Paciente
+                                    </h2>
+                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mb-4">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
                                     <a href="pages/team-sing.html#A">
                                         <div class="team-img">
                                             <img src="img/team/team 4.jpg" alt="Member Photo">
                                         </div>
-                                        <div class="team-content">
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Calisto Chemane</h4>
                                             <p>Atendimento ao Paciente</p>
                                         </div>
                                     </a>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row text-center mb-2">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h2 class="h4 d-flex align-intems-center justify-content-center"><img
+                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            alt="">Departamento Financeiro
+                                    </h2>
+                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mb-4">
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
                                     <a href="pages/team-sing.html#B">
                                         <div class="team-img">
                                             <img src="img/team/team-6.jpg" alt="Member Photo">
                                         </div>
-                                        <div class="team-content">
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Erika Pereira</h4>
                                             <p>Nutricionista</p>
                                         </div>
@@ -227,7 +244,7 @@
                                         <div class="team-img">
                                             <img src="img/team/team-5.jpg">
                                         </div>
-                                        <div class="team-content">
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Dra. Inês Claudino</h4>
                                             <p>Pediatra</p>
                                         </div>
@@ -240,10 +257,149 @@
                                         <div class="team-img">
                                             <img src="img/team/team-7.jpg">
                                         </div>
-                                        <div class="team-content">
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
                                             <p>Médica Geral </p>
 
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row text-center mb-2">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h2 class="h4 d-flex align-intems-center justify-content-center"><img
+                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            alt="">Especialistas
+                                    </h2>
+                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mb-4">
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#B">
+                                        <div class="team-img">
+                                            <img src="img/team/team-6.jpg" alt="Member Photo">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Dra Erika Pereira</h4>
+                                            <p>Nutricionista</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#C">
+                                        <div class="team-img">
+                                            <img src="img/team/team-5.jpg">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Dra. Inês Claudino</h4>
+                                            <p>Pediatra</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#C">
+                                        <div class="team-img">
+                                            <img src="img/team/team-8.jpg">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Dra Joana Costa</h4>
+                                            <p>Psicóloga Clínica</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#D">
+                                        <div class="team-img">
+                                            <img src="img/team/team-7.jpg">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
+                                            <p>Médica Geral </p>
+
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#D">
+                                        <div class="team-img">
+                                            <img src="img/team/team-8.jpg">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Enfermeira Tânia Semende</h4>
+                                            <p>Enfermeira especialista saúde materno-infantil</p>
+
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row text-center mb-2">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h2 class="h4 d-flex align-intems-center justify-content-center"><img
+                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;" alt="">
+                                        Higienização
+
+                                    </h2>
+                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mb-4">
+                            <div class="col-sm-6 col-md-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#A">
+                                        <div class="team-img">
+                                            <img src="img/team/team-8.jpg" alt="Member Photo">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Dulce Covane</h4>
+                                            <p>Higienização</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row text-center mb-2">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h2 class="h4 d-flex align-intems-center justify-content-center"><img
+                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            alt="">Parcerias
+                                    </h2>
+                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mb-4">
+                            <div class="col-sm-6 col-md-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#A">
+                                        <div class="team-img">
+                                            <img src="img/team/team-8.jpg" alt="Member Photo">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">André Antunes</h4>
+                                            <p>Personal Trainer</p>
                                         </div>
                                     </a>
                                 </div>
