--- a/pages/footer.html
+++ b/pages/footer.html
@@ -6,7 +6,7 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto text-white">
                 <!-- Content -->
                 <div class="footer-logo mb-2"><img src="../img/footer-logo1.png" alt=""></div>
-                <p>
+                <p class="text-left">
                     Desejamos apoiar as famílias na jornada da maternidade e paternidade, cuidando de todos
                     os
                     elementos que as constituem
