--- a/pages/header.html
+++ b/pages/header.html
@@ -16,9 +16,7 @@
             <div class="col-lg-2">
                 <div class="header__top__right">
                     <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
@@ -207,7 +205,7 @@
                         <li><a class="arrow" href="../additional-services.html">Workshops<span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="workshop.html">Workshops</a></li>
+                                <li><a href="workshop.html">Workshops/Grupos de Apoio</a></li>
                                 <li><a href="workshop-amament.html">Amamentação</a></li>
                                 <li><a href="workshop-bebe.html">Bebé</a></li>
                                 <li><a href="workshp-gravidez.html">Gravidez</a></li>
