--- a/consultas.html
+++ b/consultas.html
@@ -183,7 +183,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/amamentacao.png" style="width: 80px;">
+                            <img src="img/icons/amamentação-white.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Amamentação</h5>
@@ -203,7 +203,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/cirurgia-plastica.png" style="width: 80px;">
+                            <img src="img/icons/cirurgia-white.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Cirurgia</h5>
@@ -223,7 +223,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/nurse.png" style="width: 80px;">
+                            <img src="img/icons/Enfermagem.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Enfermagem</h5>
@@ -243,7 +243,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/travel-and-tourism.png" style="width: 80px;">
+                            <img src="img/icons/viajante-white.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Medicina do Viajante</h5>
@@ -260,7 +260,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/nutritional-plan.png" style="width: 80px;">
+                            <img src="img/icons/Nutrição-white.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Nutrição</h5>
@@ -281,20 +281,20 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/pediatrics.png" style="width: 80px;">
+                            <img src="img/icons/Pediatra .png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Pediatria</h5>
                             <ul>
+                                <li><a href="pages/pediatria.html#D"><i class="fa fa-check-circle"></i> Sono
+                                        Infantil</a></li>
+                                <li><a href="pages/pediatria.html#C"><i class="fa fa-check-circle"></i> Criança
+                                        doente</a></li>
+                                <li><a href="pages/pediatria.html#E"><i class="fa fa-check-circle"></i> Introdução
+                                        alimentar</a></li>
                                 <li><a href="pages/pediatria.html#A"><i class="fa fa-check-circle"></i> Pré-natal</a>
                                 </li>
                                 <li><a href="pages/pediatria.html#B"><i class="fa fa-check-circle"></i> Rotina</a></li>
-                                <li><a href="pages/pediatria.html#C"><i class="fa fa-check-circle"></i> Criança
-                                        doente</a></li>
-                                <li><a href="pages/pediatria.html#D"><i class="fa fa-check-circle"></i> Sono
-                                        Infantil</a></li>
-                                <li><a href="pages/pediatria.html#E"><i class="fa fa-check-circle"></i> Introdução
-                                        alimentar</a></li>
                             </ul>
                         </div>
                     </div>
@@ -303,7 +303,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/reiki.png" style="width: 80px;">
+                            <img src="img/icons/Terapia Ocupacional.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Terapia Ocupacional</h5>
@@ -322,7 +322,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
-                            <img src="img/icons/atendente.png" style="width: 80px;">
+                            <img src="img/icons/primeiros-socoros.png" style="width: 80px;">
                         </div>
                         <div class="services__item__text">
                             <h5>Testes Diagnósticos</h5>
