--- a/header.html
+++ b/header.html
@@ -99,11 +99,11 @@
                                     <li>
                                         <span><img src="img/icons/pediatria-alt.png" alt="">Pediatria</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="pages/pediatria.html#A">Pré-natal</a></li>
-                                            <li><a href="pages/pediatria.html#B">Rotina</a></li>
-                                            <li><a href="pages/pediatria.html#C">Criança doente</a></li>
                                             <li><a href="pages/pediatria.html#D">Consulta de sono infantil</a></li>
+                                            <li><a href="pages/pediatria.html#C">Criança doente</a></li>
+                                            <li><a href="pages/pediatria.html#A">Pré-natal</a></li>
                                             <li><a href="pages/pediatria.html#E">Introdução alimentar</a></li>
+                                            <li><a href="pages/pediatria.html#B">Rotina</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -148,7 +148,8 @@
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu grav">
                                     <li>
-                                        <span>A Clínica durante a gravidez</span>
+                                        <span><img src="img/icons/Gravidez.png" alt="">A Clínica durante a
+                                            gravidez</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/amament-pre-parto.html#pre">Amamentação</a></li>
                                             <li><a href="pages/pediatria.html#A">Pediatria pré-natal</a></li>
@@ -160,21 +161,22 @@
                                     </li>
 
                                     <li>
-                                        <span>Preparação para a Amamentação</span>
+                                        <span><img src="img/icons/amamentacao.png" alt="">Preparação para a
+                                            Amamentação</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/curso-amamentacao-grupo.html">Curso em grupo</a></li>
                                             <li><a href="pages/curso-amamentacao-indiv.html">Curso Individual</a></li>
                                             <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                         </ul>
                                         <br>
-                                        <span>Exercício Físico</span>
+                                        <span><img src="img/icons/Exercício Fisico.png" alt="">Exercício Físico</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="#">Plano de treino para a gravidez</a></li>
                                         </ul>
 
                                     </li>
                                     <li>
-                                        <span>Preparação para o parto</span>
+                                        <span><img src="img/icons/Gravidez.png" alt="">Preparação para o parto</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/curso-prep-grupo.html">Curso em grupo</a></li>
                                             <li><a href="pages/curso-prep-indiv.html">Curso Individual</a></li>
