--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                                 </div>
                                 <div class="testimonial__author__text">
                                     <h5>Joana Bettencourt</h5>
-                                    <span>M^se</span>
+                                    <span>Mãe</span>
                                 </div>
                             </div>
                             <div class="rating">
@@ -570,7 +570,7 @@
                                 </div>
                                 <div class="testimonial__author__text">
                                     <h5>Fátima Albasin</h5>
-                                    <span>Businesswoman</span>
+                                    <span>Mãe</span>
                                 </div>
                             </div>
                             <div class="rating">
@@ -594,7 +594,7 @@
                                 </div>
                                 <div class="testimonial__author__text">
                                     <h5>Charlotte McCormick</h5>
-                                    <span>Businesswoman</span>
+                                    <span>Mãe</span>
                                 </div>
                             </div>
                             <div class="rating">
@@ -619,7 +619,7 @@
                                 </div>
                                 <div class="testimonial__author__text">
                                     <h5>Ariela Alves</h5>
-                                    <span>Mother</span>
+                                    <span>Mãe </span>
                                 </div>
                             </div>
                             <div class="rating">
@@ -659,7 +659,7 @@
                                 </div>
                                 <div class="testimonial__author__text">
                                     <h5>Rita Roquette</h5>
-                                    <span>Mother</span>
+                                    <span>Mãe </span>
                                 </div>
                             </div>
                             <div class="rating">
