--- a/team.html
+++ b/team.html
@@ -210,6 +210,19 @@
                                     </a>
                                 </div>
                             </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#E">
+                                        <div class="team-img">
+                                            <img src="img/team/team-9.jpg" alt="Member Photo">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Katia Mabjaia</h4>
+                                            <p>Atendimento ao Paciente</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="container">
@@ -227,40 +240,13 @@
                         <div class="row justify-content-center mb-4">
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="pages/team-sing.html#B">
+                                    <a href="pages/team-sing.html#F">
                                         <div class="team-img">
-                                            <img src="img/team/team-6.jpg" alt="Member Photo">
+                                            <img src="img/team/team-10.jpg" alt="Member Photo">
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
-                                            <h4 class="mb-2">Erika Pereira</h4>
-                                            <p>Nutricionista</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
-                                <div class="inner">
-                                    <a href="pages/team-sing.html#C">
-                                        <div class="team-img">
-                                            <img src="img/team/team-5.jpg">
-                                        </div>
-                                        <div class="team-content d-grid justify-items-center justify-content-center">
-                                            <h4 class="mb-2">Dra. Inês Claudino</h4>
-                                            <p>Pediatra</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
-                                <div class="inner">
-                                    <a href="pages/team-sing.html#D">
-                                        <div class="team-img">
-                                            <img src="img/team/team-7.jpg">
-                                        </div>
-                                        <div class="team-content d-grid justify-items-center justify-content-center">
-                                            <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
-                                            <p>Médica Geral </p>
-
+                                            <h4 class="mb-2">Ana Lusete Matlabe</h4>
+                                            <p class="text-left">Técnica de Saúde Pública e Gestão Ambiental</p>
                                         </div>
                                     </a>
                                 </div>
@@ -280,6 +266,20 @@
                             </div>
                         </div>
                         <div class="row justify-content-center mb-4">
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#G">
+                                        <div class="team-img">
+                                            <img src="img/team/team-13.jpg">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Elsa Manjate</h4>
+                                            <p>Agente de Medicina Preventiva </p>
+
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
                                     <a href="pages/team-sing.html#B">
@@ -308,13 +308,30 @@
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="pages/team-sing.html#C">
+                                    <a href="pages/team-sing.html#H">
                                         <div class="team-img">
-                                            <img src="img/team/team-8.jpg">
+                                            <img src="img/team/team-11.jpg">
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Dra Joana Costa</h4>
                                             <p>Psicóloga Clínica</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row justify-content-center mb-4">
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#I">
+                                        <div class="team-img">
+                                            <img src="img/team/team-8.jpg" alt="Member Photo">
+                                        </div>
+                                        <div class="team-content d-grid justify-items-center justify-content-center">
+                                            <h4 class="mb-2">Dra Marina Pastore</h4>
+                                            <p class="text-left">Terapeuta Ocupacional</p>
                                         </div>
                                     </a>
                                 </div>
@@ -335,14 +352,13 @@
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="pages/team-sing.html#D">
+                                    <a href="pages/team-sing.html#J">
                                         <div class="team-img">
-                                            <img src="img/team/team-8.jpg">
+                                            <img src="img/team/team-12.jpg" alt="Member Photo">
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
-                                            <h4 class="mb-2">Enfermeira Tânia Semende</h4>
-                                            <p>Enfermeira especialista saúde materno-infantil</p>
-
+                                            <h4 class="mb-2">Tânia Semende</h4>
+                                            <p class="text-left">Enfermeira especialista saúde materno-infantil</p>
                                         </div>
                                     </a>
                                 </div>
@@ -365,7 +381,7 @@
                         <div class="row justify-content-center mb-4">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="pages/team-sing.html#A">
+                                    <a href="pages/team-sing.html#K">
                                         <div class="team-img">
                                             <img src="img/team/team-8.jpg" alt="Member Photo">
                                         </div>
@@ -383,7 +399,7 @@
                             <div class="col-lg-12">
                                 <div class="section-title">
                                     <h2 class="h4 d-flex align-intems-center justify-content-center"><img
-                                            src="../img/icons/viajante.png" class="mr-2" style="width: 2rem;"
+                                            src="../img/icons/Exercício Fisico.png" class="mr-2" style="width: 2rem;"
                                             alt="">Parcerias
                                     </h2>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
@@ -393,7 +409,7 @@
                         <div class="row justify-content-center mb-4">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <a href="pages/team-sing.html#A">
+                                    <a href="pages/team-sing.html#L">
                                         <div class="team-img">
                                             <img src="img/team/team-8.jpg" alt="Member Photo">
                                         </div>
