--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -147,11 +147,12 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="" class="mb-4 subtitle fw-bolder">Enfermagem
+                                        <h2 id="Consulta" class="mb-2 subtitle fw-bolder">Enfermagem
                                         </h2>
-                                        <h5 class="h4"><b id="subtituloText"></b>
+                                        <h5 class="h4"><b id="subtitulo">O cuidado do seu recém-nascido na comodidade da
+                                                sua casa.</b>
                                         </h5>
-                                        <p class="">Enfermagem é uma profissão chave nos cuidados de saúde,
+                                        <p class="" id="texto">Enfermagem é uma profissão chave nos cuidados de saúde,
                                             especialmente na área materno-infantil. <i>N’A Clínica</i>
                                             proporcionamos cuidados de Enfermagem de excelência aos nossos pacientes e
                                             às suas famílias. </p>
@@ -314,9 +315,10 @@
                                                 pós-parto; pesagem e medição de vários
                                                 parâmetros importantes na saúde das puérperas.</a></li>
                                     </ul>
-                                    <p>
-                                        <br><br>
-                                        <b><i>Importante:</i></b>Nesta consulta recolhemos informação clínica pertinente
+                                    <div class="section-title mb-2">
+                                        <h4 class=" mb-2 mt-4"><b>! Informação importante !</b></h3>
+                                    </div>
+                                    <p>Nesta consulta recolhemos informação clínica pertinente
                                         de
                                         cada paciente e executamos um exame físico detalhado do
                                         mesmo.
@@ -331,32 +333,31 @@
                             <div class="card shadow" style="background-image: url('../img/bg1.png');">
                                 <div class="card-more">
                                     <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i> estão
-                                        disponíveis consultas
-                                        de
-                                        diferentes especialidades, tal como variados workshops, desde a gravidez à
-                                        parentalidade. Clique em cada um dos ícones seguintes para descobrir os
-                                        nossos
-                                        serviços.</p>
+                                        disponíveis consultas de diferentes especialidades, tal como variados workshops,
+                                        para acompanhar a sua família nas
+                                        várias etapas da sua vida. Clique em cada um dos ícones seguintes para descobrir
+                                        os nossos serviços.</p>
                                     <div class="d-flex">
                                         <div class="col-lg-6 col-md-6 ">
                                             <a class="d-grid text-center justify-content-center"
-                                                href="curso-prep-grupo.html.html">
+                                                href="../consultas.html">
                                                 <div class="card-icon">
-                                                    <img src="../img/icons/gravidez-white.png" style="width: 75px;">
+                                                    <img src="../img/icons/Enfermagem.png" style="width: 75px;">
                                                 </div>
                                                 <div class="text-white card-text">
-                                                    <button id="con-pre" class="text-white">Gravidez</button>
+                                                    <button class="text-white">Consultas</button>
                                                 </div>
                                             </a>
                                         </div>
                                         <div class="col-lg-6 col-md-6">
-                                            <a class="d-grid text-center justify-content-center" href="workshop.html">
+                                            <a class="d-grid text-center justify-content-center"
+                                                href="enfermagem.html#pensos">
                                                 <div class="card-icon">
-                                                    <img src="../img/icons/workshop.png" style="width: 104px;">
+                                                    <img src="../img/icons/primeiros-socoros.png" style="width: 75px;">
 
                                                 </div>
                                                 <div class="text-white card-text ">
-                                                    <button id="con" class="text-white">Workshops</button>
+                                                    <button id="con" class="text-white">Penso</button>
                                                 </div>
                                             </a>
                                         </div>
@@ -366,35 +367,75 @@
                         </div>
                     </div>
                 </div>
+                <div id="sutura-ferida" style="display: none;">
+                    <div class="col-lg-8 col-md-8">
+                        <div class="row">
+                            <div class="blog__details__text ml-4 mr-4">
+                                <div class="blog__details__text__item">
+                                    <!-- Título da Seção -->
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <div class="section-title">
+                                                <h5 class=""><b>Esta consulta destina-se a:</b></h5>
+                                                <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                            </div>
+                                        </div>
+                                    </div>
 
-                <div id="sutura-ferida" class="col-lg-8 col-md-8" style="display: none;">
-                    <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
-                            <div class="blog__details__text__item">
-                                <!-- Título da Seção -->
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="section-title">
-                                            <h5 class=""><b>Esta consulta destina-se a:</b></h5>
-                                            <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                    <p>crianças que tenham uma ferida que necessite desinfeção e colocação ou mudança de
+                                        penso.
+                                    </p>
+
+                                    <div class="section-title pt-4">
+                                        <h5 class=""><b>Procedimento cirúrgico:</b></h5>
+                                        <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
+                                    </div>
+                                    <ul class="list mb-4">
+                                        <li><a><i class="fa fa-check-circle"></i> Desinfeção adequada de feridas e
+                                                aplicação
+                                                ou mudança de pen</a></li>
+                                    </ul>
+                                </div>
+                                <a href="../info.html" class="primary-btn">Marcar Consulta </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
+                        <div class="row">
+                            <div class="card shadow" style="background-image: url('../img/bg1.png');">
+                                <div class="card-more">
+                                    <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i> estão
+                                        disponíveis consultas de diferentes especialidades, tal como variados workshops,
+                                        para acompanhar a sua família nas
+                                        várias etapas da sua vida. Clique em cada um dos ícones seguintes para descobrir
+                                        os nossos serviços.</p>
+                                    <div class="d-flex">
+                                        <div class="col-lg-6 col-md-6 ">
+                                            <a class="d-grid text-center justify-content-center"
+                                                href="../consultas.html">
+                                                <div class="card-icon">
+                                                    <img src="../img/icons/Enfermagem.png" style="width: 75px;">
+                                                </div>
+                                                <div class="text-white card-text">
+                                                    <button class="text-white">Consultas</button>
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <div class="col-lg-6 col-md-6">
+                                            <a class="d-grid text-center justify-content-center"
+                                                href="enfermagem.html#conseferm">
+                                                <div class="card-icon">
+                                                    <img src="../img/icons/heart.png" style="width: 80px;">
+
+                                                </div>
+                                                <div class="text-white card-text ">
+                                                    <button id="con" class="text-white">Enfermagem</button>
+                                                </div>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
-
-                                <p>crianças que tenham uma ferida que necessite desinfeção e colocação ou mudança de
-                                    penso.
-                                </p>
-
-                                <div class="section-title pt-4">
-                                    <h5 class=""><b>Procedimento cirúrgico:</b></h5>
-                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
-                                </div>
-                                <ul class="list mb-4">
-                                    <li><a><i class="fa fa-check-circle"></i> Desinfeção adequada de feridas e aplicação
-                                            ou mudança de pen</a></li>
-                                </ul>
                             </div>
-                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -424,16 +465,15 @@
         const consultaText = document.getElementById('Consulta');
         const show = document.getElementById('show');
         const hidden = document.getElementById('hidden');
-        const subtituloText = document.getElementById('subtituloText');
-        const subtitulo1 = 'O cuidado do seu recém-nascido na comodidade da sua casa.'
-        const subtitulo2 = 'Cuidar dos pacientes com amor é o que distingue a nossa equipa de Enfermagem!'
+        const subtitulo = document.getElementById('subtitulo');
+        const texto = document.getElementById('texto');
 
         // Função para exibir a consulta Cirurgia
         function showCirurgia() {
             CirurgiaDiv.style.display = 'flex';
             anelDiv.style.display = 'none';
             suturaDiv.style.display = 'none';
-            subtituloText.textContent = subtitulo1;
+            subtitulo.textContent = "O cuidado do seu recém-nascido na comodidade da sua casa.";
             consultaText.textContent = "Apoio domiciliário no pós-parto";
             CirurgiaBtn.classList.add("active");
             anelBtn.classList.remove("active");
@@ -448,8 +488,8 @@
             anelDiv.style.display = 'flex';
             suturaDiv.style.display = 'none';
             CirurgiaDiv.style.display = 'none';
+            subtitulo.textContent = "Cuidar dos pacientes com amor é o que distingue a nossa equipa de Enfermagem!";
             consultaText.textContent = "Consulta de Enfermagem";
-            subtituloText.textContent = subtitulo2;
             anelBtn.classList.add("active");
             CirurgiaBtn.classList.remove("active");
             suturaBtn.classList.remove("active");
@@ -463,7 +503,9 @@
             suturaDiv.style.display = 'flex';
             anelDiv.style.display = 'none';
             CirurgiaDiv.style.display = 'none';
+            subtitulo.textContent = "Quando precisar de uma mudança de penso, pode fazê-lo n’A Clínica.";
             consultaText.textContent = "Pensos";
+            texto.textContent = "O cuidado das lesões da pele pode necessitar as mãos de um profissional. A nossa equipa de Enfermagem tem a experiência para fazê-lo da forma mais adequada.";
             suturaBtn.classList.add("active");
             anelBtn.classList.remove("active");
             CirurgiaBtn.classList.remove("active");
