--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -95,18 +95,31 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-6">
         <div class="container mt-9">
-            <div id="img" class="blog__details__hero set-bg mb-0" data-setbg="../img/blog/details/nutrio.jpg">
-                <!-- <div class="row d-flex justify-content-center">
-                    <div class="col-lg-7 text-center">
-                        <div class="blog__hero__text">
-                            <h2>Here’s how you can get a natural glow this party season</h2>
-                            <ul>
-                                <li><img src="../img/blog/blog-author.jpg" alt=""> John Doe</li>
-                                <li>Dec 06, 2019</li>
-                            </ul>
+            <div class="services__details__pic">
+                <div class="services__details__pic">
+                    <img id="img" src="../img/blog/details/nutrio.jpg" alt="">
+                    <div class="services__details__content">
+                        <div class="d-flex w-100 align-items-end">
+                            <div class="mr-3">
+                                <div class="services__details__title">
+                                    <h3><img src="../img/icons/Nutrição-white.png" class="fa " alt="">
+                                    </h3>
+                                </div>
+                            </div>
+                            <div>
+                                <h4 class="text-white"><a href="team-sing.html#B">Dra Erika Pereira</a></h4>
+                                <h5>Nutricionista</h5>
+                            </div>
+                        </div>
+                        <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60mn | <i class="fa fa-user"></i>
+                                presencial |
+                                <i class="fa fa-desktop"></i> Online
+                            </span>
+
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
     </section>
     <!-- Blog Details Section End -->
@@ -137,7 +150,7 @@
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
-                                    <h5 class="mb-0 mt-4 h4"><b>Um hábito nutricional saudável é um presente que
+                                    <h5 class="mb-2 h4"><b>Um hábito nutricional saudável é um presente que
                                             fica para a vida!</b></h5>
                                     <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
                                         nascimento através de hábitos salutares.
@@ -235,7 +248,8 @@
                                     </div>
                                 </div>
 
-                                <p>Adultos que necessitem orientação com o seu regime alimentar ou sofram doenças que
+                                <p><span class="underline">Adultos</span> que necessitem orientação com o seu regime
+                                    alimentar ou sofram doenças que
                                     requerem um acompanhamento
                                     especializado em Nutrição.
                                 </p>
@@ -251,8 +265,10 @@
                                             quadros de patologia e doença, etc.</a></li>
 
                                 </ul>
-                                <p>
-                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                <div class="section-title mt-4">
+                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                </div>
+                                <p> Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado do
                                     mesmo.
                                 </p>
@@ -274,7 +290,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <p>A crianças e adolescentes.</p>
+                                <p class="underline">A crianças e adolescentes.</p>
 
 
                                 <div class="section-title pt-4">
@@ -282,7 +298,7 @@
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                                 <ul class="list mb-4">
-                                    <li><a><i class="fa fa-check"></i>O foco é avaliar o estado nutricional dos
+                                    <li><a><i class="fa fa-check-circle"></i>O foco é avaliar o estado nutricional dos
                                             pacientes de acordo com a sua fase de desenvolvimento. Mediante os objetivos
                                             definidos, fazer o aconselhamento personalizado e apresentar as devidas
                                             ferramentas e estratégias para a implementação
@@ -291,8 +307,10 @@
                                             Nutricionista especializada em Pediatria.</a></li>
 
                                 </ul>
-                                <p>
-                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                <div class="section-title mt-4">
+                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                </div>
+                                <p>Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado do
                                     mesmo. Traga consigo o Boletim de Saúde da criança.
                                 </p>
@@ -315,7 +333,7 @@
                                     </div>
                                 </div>
 
-                                <p>Pessoas ou casais que pretendem engravidar.
+                                <p><span class="underline">Pessoas ou casais</span> que pretendem engravidar.
                                 </p>
                                 <div class="section-title pt-4">
                                     <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
@@ -328,8 +346,10 @@
                                             para a concretização da gravidez.</a></li>
 
                                 </ul>
-                                <p>
-                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                <div class="section-title mt-4">
+                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                </div>
+                                <p>Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado da
                                     mesma.
                                 </p>
@@ -353,7 +373,7 @@
                                     </div>
                                 </div>
 
-                                <p>grávidas ou casais grávidos.
+                                <p><span class="underline">Grávidas ou casais</span> grávidos.
                                 </p>
                                 <div class="section-title pt-4">
                                     <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
@@ -368,8 +388,10 @@
                                             bebé.</a>
                                     </li>
                                 </ul>
-                                <p>
-                                    <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica pertinente de
+                                <div class="section-title mt-4">
+                                    <h4 class=" mb-2"><b>! Informação importante !</b></h4>
+                                </div>
+                                <p> Nesta consulta recolhemos informação clínica pertinente de
                                     cada paciente e executamos um exame físico detalhado da
                                     mesma. Traga consigo o Boletim de Saúde da Grávida.
                                 </p>
@@ -378,24 +400,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
-                                <div class="icon text-center p-2">
-                                    <img src="../img/icons/Nutrição.png" width="100">
-                                </div>
-                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas,
-                                    clique em cada uma das seguintes consultas para saber
-                                    que consultas tem disponíveis.</p>
+                                <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i> estão disponíveis
+                                    consultas de diferentes especialidades, tal como variados workshops, para acompanhar
+                                    a sua
+                                    família nas várias etapas da sua vida. Clique em cada um dos ícones seguintes para
+                                    descobrir os nossos serviços.</p>
                                 <div class="d-flex">
-                                    <div class="col-lg-12 col-md-12 ">
-                                        <div class="card-text d-grid">
-                                            <button id="ABtn">Consulta de Nutrição Geral</button>
-                                            <button id="BBtn">Consulta de Nutrição Infantil</button>
-                                            <button id="DBtn">Consulta de Pré-conceção</button>
-                                            <button id="EBtn">Consulta de Pré-natal</button>
-                                        </div>
+                                    <div class="col-lg-6 col-md-6 ">
+                                        <a class="d-grid text-center justify-content-center" href="../consultas.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Enfermagem.png" style="width: 75px;">
+                                            </div>
+                                            <div class="text-white card-text">
+                                                <button id="con-pre" class="text-white">Consultas</button>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                            <div class="card-icon">
+                                                <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
+
+                                            </div>
+                                            <div class="text-white card-text ">
+                                                <button id="con" class="text-white">Consulta de Nutrição</button>
+                                            </div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -439,7 +473,7 @@
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
             title.textContent = "Consulta de Nutrição Geral"; // Atualiza o texto para "Cirurgia"
-            img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = '../img/blog/details/nutri-geral.jpg'; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
             DBtn.classList.remove("active");
@@ -454,7 +488,7 @@
             BDiv.style.display = 'block'; // Exibe a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/nutrio-infant.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = '../img/blog/details/nutrio-infant.jpg'; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Nutrição Infantil"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.add("active");
@@ -470,7 +504,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/Pré-conceção.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = "../img/blog/details/Pré-conceção.jpg"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
@@ -485,7 +519,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'block'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = "../img/blog/details/diabetes.jpg"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Pré-natal"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
