--- a/pages/vacinacao.html
+++ b/pages/vacinacao.html
@@ -101,19 +101,33 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-6">
         <div class="container mt-9">
-            <div id="img" class="blog__details__hero set-bg mb-0" data-setbg="../img/blog/details/nutrio.jpg">
-                <!-- <div class="row d-flex justify-content-center">
-                    <div class="col-lg-7 text-center">
-                        <div class="blog__hero__text">
-                            <h2>Here’s how you can get a natural glow this party season</h2>
-                            <ul>
-                                <li><img src="../img/blog/blog-author.jpg" alt=""> John Doe</li>
-                                <li>Dec 06, 2019</li>
-                            </ul>
+            <div class="services__details__pic">
+                <div class="services__details__pic">
+                    <img id="img" src="../img/blog/details/blog-hero4.jpg" alt="">
+                    <div class="services__details__content">
+                        <div class="d-flex w-100 align-items-end">
+                            <div class="mr-3">
+                                <div class="services__details__title">
+                                    <h3><img src="../img/icons/vacina.png" class="fa " alt="">
+                                    </h3>
+                                </div>
+                            </div>
+                            <div>
+                                <h5>Profissional</h5>
+                                <h4 class="text-white"><a href="team-sing.html#D">Enfermeira ou Técnica de Vacinação</a>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 5mn | <i class="fa fa-user"></i>
+                                presencial
+                            </span>
+
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
+        </div>
     </section>
     <!-- Blog Details Section End -->
 
@@ -158,7 +172,7 @@
                 <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
-                            <div class="blog__details__text__item">
+                            <div class="blog__details__text__item mt-4">
                                 <!-- Título da Seção -->
                                 <p>Durante a vida adulta necessitamos continuar a fazer vacinas de forma periódica de
                                     forma a estarmos sempre bem protegidos contra algumas doenças infeciosas. <br><br>
@@ -177,7 +191,8 @@
                                         <br>
                                     </li>
                                     <li>
-                                        b) Adultos que nasceram depois de 1970 sem história credível de sarampo ou
+                                        b) <span class="underline">Adultos que nasceram depois de 1970</span> sem
+                                        história credível de sarampo ou
                                         estado vacinal desconhecido, devem receber 1 dose da vacina de sarampo,
                                         parotidite e rubéola (VASPR ou MMR). Profissionais de Saúde com contato próximo
                                         com doentes devem receber 2 doses independentemente do seu estado vacinal.
@@ -185,7 +200,8 @@
                                     </li>
                                     <li>
 
-                                        c) Mulheres em idade fértil: antes da primeira gravidez, as mulheres devem ter
+                                        c) <span class="underline">Mulheres em idade fértil:</span> antes da primeira
+                                        gravidez, as mulheres devem ter
                                         registo de, pelo menos, 3 doses de vacinas contra o tétano (Td, Tdpa, DTPa,
                                         hexavalente, pentavalente ou tetravalente). Além disso devem estar adequadamente
                                         vacinadas com 2 doses da vacina contra a rubéola (VASPR ou MMR). Esta vacina
@@ -193,7 +209,6 @@
                                     </li>
                                 </ul>
                                 </p>
-
                             </div>
                             <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
@@ -202,7 +217,7 @@
                 <div id="B" class="col-lg-8 col-md-8" style="display: none;">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
-                            <div class="blog__details__text__item">
+                            <div class="blog__details__text__item mt-4">
                                 <!-- Título da Seção -->
                                 <p>A vacinação durante a gravidez e o aleitamento materno é segura e protege mãe e bebé
                                     de doenças infeciosas com efeitos potencialmente devastadores.
@@ -335,9 +350,11 @@
                                 <div class="icon text-center p-2">
                                     <img src="../img/icons/Vacinação.png" width="100">
                                 </div>
-                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas,
-                                    clique em cada uma das seguintes consultas para saber
-                                    que consultas tem disponíveis.</p>
+                                <p class="border-bottom text-white">N’A Clínica estão disponíveis vários tipos de
+                                    vacinas. Seguimos plano vacinal do seu país de origem, incluindo vacinas
+                                    extras que estão recomendadas para Moçambique ou para onde vá viajar. Clique em cada
+                                    um dos links seguintes para
+                                    descobrir os nossos serviços.</p>
                                 <div class="d-flex">
                                     <div class="col-lg-12 col-md-12 ">
                                         <div class="card-text d-grid">
@@ -390,7 +407,7 @@
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
             title.textContent = "Vacinação para adultos"; // Atualiza o texto para "Cirurgia"
-            img.style.backgroundImage = "url('../img/blog/details/Vacinacao-adulto.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = "../img/blog/details/Vacinacao-adulto.jpg"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
             DBtn.classList.remove("active");
@@ -405,7 +422,7 @@
             BDiv.style.display = 'block'; // Exibe a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/gravida-vacinando.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = "../img/blog/details/gravida-vacinando.jpg"; // Atualiza o texto para "Cirurgia"
             title.textContent = "vacinação durante a gravidez e aleitamento materno"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.add("active");
@@ -421,7 +438,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/crianca-vacinando.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = "../img/blog/details/crianca-vacinando.jpg"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Vacinação Infantil"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
@@ -436,7 +453,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'block'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/familia.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.src = "../img/blog/details/familia.jpg"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Viajante"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
